--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,12 @@ example-weights2/example-weights2.vcxproj
 example-weights2/example-weights2.vcxproj.filters
 example-weights2/example-weights2.vcxproj.user
 example-weights2/icon.rc
+example-weights2/.vs/example-weights2/v17/Solution.VC.db-wal
+example-weights2/.vs/example-weights2/v17/Solution.VC.db-shm
+example-weights2/.vs/example-weights2/v17/Solution.VC.db
+example-weights2/.vs/example-weights2/v17/Browse.VC.opendb
+example-weights2/.vs/example-weights2/v17/Browse.VC.db-wal
+example-weights2/.vs/example-weights2/v17/Browse.VC.db-shm
+example-weights2/.vs/example-weights2/v17/Browse.VC.db
+example-weights2/.vs/example-weights2/FileContentIndex/read.lock
+example-weights2/.vs/example-weights2/FileContentIndex/a4d061fd-cde0-4402-b332-49dc13b3b752.vsidx
