--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,4 @@ example-weights2/.vs/example-weights2/v17/Browse.VC.db-shm
 example-weights2/.vs/example-weights2/v17/Browse.VC.db
 example-weights2/.vs/example-weights2/FileContentIndex/read.lock
 example-weights2/.vs/example-weights2/FileContentIndex/a4d061fd-cde0-4402-b332-49dc13b3b752.vsidx
+example-weights2/.vs/example-weights2/FileContentIndex/6e6b9e4f-e3ef-4558-871e-cddf7dba38e2.vsidx
